# openroad

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: pull-request.yml  release-main.yml
docs/: architecture.md  licensing.md  phase2-visual-qa.md  roadmap.md  source-policy.md
game-client/godot/: .gitignore  README.md  export_presets.cfg  project.godot  run_local.sh  test_headless.sh
game-client/godot/addons/procedural_trainer/: README.md  region_pack_loader.gd
game-client/godot/native/: README.md
game-client/godot/scenes/: main.gd  main.tscn
geo-pipeline/: run_geo_pipeline_cli.py
geo-pipeline/geo_pipeline/: __init__.py  cli.py  contracts.py  determinism.py  gpx.py  phase1.py  phase2.py  sample_data.py
geo-pipeline/geo_pipeline/configs/: milwaukee_phase1.json  milwaukee_phase2.json  milwaukee_phase2_live.json
geo-pipeline/geo_pipeline/fixtures/milwaukee_phase2/: esa_worldcover.json  openstreetmap.json  usda_naip.json  usgs_3dep_dem.json
geo-pipeline/geo_pipeline/schemas/: attribution_pack.schema.json  region_tile_manifest.schema.json  ride_graph_pack.schema.json  route_definition.schema.json  scenery_pack.schema.json  source_manifest.schema.json
region-data/: README.md
region-data/milwaukee/: oak_leaf_demo_loop.gpx
region-data/milwaukee/mke_demo_region_pack/: attribution.json  manifest.json  ride_graph.json  routes.json  scenery.json  source_manifest.json
region-data/milwaukee/mke_phase2_live_region_pack/: attribution.json  region_manifest.json  route_catalog.json  routes.json  scenery_index.json  source_manifest.json  streaming_regions.json
region-data/milwaukee/mke_phase2_live_region_pack/tiles/tile_x00_y00/: manifest.json  ride_graph.json  scenery.json
region-data/milwaukee/mke_phase2_region_pack/: attribution.json  region_manifest.json  ride_graph.json  route_catalog.json  routes.json  scenery_index.json  source_manifest.json  streaming_regions.json
sample-tracks/: Wauwatosa_to_Lakefront.gpx
tests/: test_docs_and_layout.py  test_phase1_pipeline.py  test_phase2_pipeline.py  test_region_contracts.py
tools/ci/: install_godot_macos.sh  package_release.py  render_ci_comment.py  run_ci_suite.py  set_export_version.py
(+439 files in other folders)
