[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural-trainer"
version = "0.1.0"
description = "Open-source procedural bike world foundation with engine-agnostic region packs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "procedural_trainer contributors" }
]
dependencies = []

[project.scripts]
procedural-trainer = "geo_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "geo-pipeline" }

[tool.setuptools.packages.find]
where = ["geo-pipeline"]
